fixed border visibility

--- a/projects/style.css
+++ b/projects/style.css
@@ -8,6 +8,7 @@ h2{
     background-color: var(--light-color);
     width:100%;
     border-radius: 10px;
+    border: 1px solid var(--icon-color);
 }
 
 p{
@@ -102,6 +103,6 @@ iframe{
     list-style-type: initial;
 }
 .chapters-divider{
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--icon-color);
     margin: 2rem 0;
 }
